--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 
-# Created by https://www.gitignore.io/api/matlab
+# Created by https://www.gitignore.io/api/data,matlab
+
+### Data ###
+*.csv
+*.dat
+*.efx
+*.gbr
+*.key
+*.pps
+*.ppt
+*.pptx
+*.sdf
+*.tax2010
+*.vcf
+*.xml
 
 ### Matlab ###
 ##---------------------------------------------------
@@ -26,4 +40,4 @@ octave-workspace
 *.autosave
 
 
-# End of https://www.gitignore.io/api/matlab
+# End of https://www.gitignore.io/api/data,matlab
